--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,22 @@
 body {
   background-color: #2F4454 !important;
 }
+
+@media (max-width: 766px) {
+  .inputBox{
+      max-width: 50vw;
+      min-width: 50vw;
+}
+
+}
+@media (min-width: 767px) {
+.inputBox {
+  max-width: 35vw;
+  min-width: 35vw;
+}
+
+}
+
 #newEntry {
 padding-top: 30px;
 display: flex;
@@ -26,10 +42,9 @@ li span {
 .inputBox {
   display: flex;
   margin: 10px auto;
-  border-radius: 3px;
+  border-radius: 7px;
   text-align: center;
   min-height: 9vh;
-  min-width: 70vw;
   background-color: #376e6f;
   color: white;
   font-size: 16px;
