--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,7 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+/* Dragula mobile rendering speed fix */
+.gu-hide{
+  left:-9999px !important;
+}
